<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.abort.exploreradmin.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.abort.exploreradmin.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />
    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.abort.exploreradmin.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />


    <fragment
        android:id="@+id/nav_place"
        android:name="com.abort.exploreradmin.ui.places.PlacesFragment"
        android:label="@string/menu_places"
        tools:layout="@layout/fragment_slideshow"/>

    <fragment
        android:id="@+id/nav_placeDetails"
        android:name="com.abort.exploreradmin.ui.placesDetails.PlacesDetailsFragment"
        android:label="@string/menu_placesDetails"
        tools:layout="@layout/fragment_slideshow"/>



</navigation>